@@ -1,3 +1,8 @@
+2018-06-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2764.c:
+	  Test for bug #2764.
+
 2018-06-28 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* support/regression/tests/gcc-torture-execute-20040409-2.c:
